// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextAreaField rendering adds the error class if the error is set 1`] = `
<div
  className="TextAreaField"
>
  <div
    className="TextAreaField__label"
  >
    <Label
      htmlFor="test-id"
      text="Label"
    />
  </div>
  <textarea
    className="TextAreaField__area TextAreaField--noresize TextAreaField--error"
    id="test-id"
    maxLength={10}
    onChange={[MockFunction]}
    placeholder="placeholder"
    value="value"
  />
  <FieldError
    alignment="right"
    text="Error"
  />
</div>
`;

exports[`TextAreaField rendering does not add the resize class if the resize is true 1`] = `
<div
  className="TextAreaField"
>
  <div
    className="TextAreaField__label"
  >
    <Label
      htmlFor="test-id"
      text="Label"
    />
  </div>
  <textarea
    className="TextAreaField__area"
    id="test-id"
    maxLength={10}
    onChange={[MockFunction]}
    placeholder="placeholder"
    value="value"
  />
  <FieldError
    alignment="right"
  />
</div>
`;

exports[`TextAreaField rendering does not render optional text if value is set 1`] = `
<div
  className="TextAreaField"
>
  <div
    className="TextAreaField__label"
  >
    <Label
      htmlFor="test-id"
      text="Label"
    />
  </div>
  <textarea
    className="TextAreaField__area TextAreaField--noresize"
    id="test-id"
    maxLength={10}
    onChange={[MockFunction]}
    placeholder="placeholder"
    value="value"
  />
  <FieldError
    alignment="right"
  />
</div>
`;

exports[`TextAreaField rendering renders expected elements 1`] = `
<div
  className="TextAreaField"
>
  <div
    className="TextAreaField__label"
  >
    <Label
      htmlFor="test-id"
      text="Label"
    />
  </div>
  <textarea
    className="TextAreaField__area TextAreaField--noresize"
    id="test-id"
    maxLength={10}
    onChange={[MockFunction]}
    placeholder="placeholder"
    value="value"
  />
  <FieldError
    alignment="right"
  />
</div>
`;

exports[`TextAreaField rendering renders expected elements when className is set 1`] = `
<div
  className="TextAreaField TestClass"
>
  <div
    className="TextAreaField__label"
  >
    <Label
      htmlFor="test-id"
      text="Label"
    />
  </div>
  <textarea
    className="TextAreaField__area TextAreaField--noresize"
    id="test-id"
    maxLength={10}
    onChange={[MockFunction]}
    placeholder="placeholder"
    value="value"
  />
  <FieldError
    alignment="right"
  />
</div>
`;

exports[`TextAreaField rendering renders optional text if provided 1`] = `
<div
  className="TextAreaField"
>
  <div
    className="TextAreaField__label"
  >
    <Label
      htmlFor="test-id"
      text="Label"
    />
    <span
      className="TextAreaField__optional"
    >
      optional
    </span>
  </div>
  <textarea
    className="TextAreaField__area TextAreaField--noresize"
    id="test-id"
    maxLength={10}
    onChange={[MockFunction]}
    placeholder="placeholder"
  />
  <FieldError
    alignment="right"
  />
</div>
`;

exports[`TextAreaField rendering sets a random id if not provided 1`] = `
<div
  className="TextAreaField"
>
  <div
    className="TextAreaField__label"
  >
    <Label
      htmlFor="e1"
      text="Label"
    />
  </div>
  <textarea
    className="TextAreaField__area TextAreaField--noresize"
    id="e1"
    maxLength={10}
    onChange={[MockFunction]}
    placeholder="placeholder"
    value="value"
  />
  <FieldError
    alignment="right"
  />
</div>
`;
